test/1.2/errors/T_EFMTARGT.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init {
    /// ERROR EBTYPE
    log "info": "%d", true;
    /// ERROR EFMTARGT
    log "info": "%p", true;
    /// ERROR EBTYPE
    log "info": "%*d", "width", 0;
}
